*** Add govuk-data-standalone
A new command which prvides a similar interface and function to the
govuk-data command, but without requiring a local Guix build daemon.
*** Switch to fetching GNU Guix snapshots from http://git.cbaines.net:gds/gnu-guix
As new releases cannot be pushed to the previous repository.
*** Add new module for ruby gems related to GOV.UK
** September
*** Update Guix release_9 -> release_10 -> release_11 -> release_12
*** Content Tagger improvements
**** Add "GDS Editor" and "Tagathon Participant" permissions
**** Run Sidekiq with Content Tagger
*** Router improvements
**** Enable specifying the header timeout for the router
*** Bundler/Gem package improvements
**** Remove the .ruby-version files, as this causes reproducibility issues
*** Data management improvements
**** Refactor the govuk-puppet data source
**** Add functionality to generate data directories with indexes
**** Add initial support for Elasticsearch
**** Add a --dry-run option to govuk-data
*** Repository hosting issues
The govuk-guix Git repository, along with the gnu-guix repository are
no longer available on https://github.com/alphagov/. There are
read-only copies on https://github.com/gds-attic/, but these are now
out of date.
** August
*** Update Guix release_8 -> release_9
*** Improve support for Whitehall attachments
** July
*** Display NGinx logs through Tailon in the development system
*** Create per-service NGinx acccess.log files
*** Improve Rails app database support
*** Plek support improvements
*** Elasticsearch connection support
** June
*** Update Guix release_7 -> release_8
*** Add support for using Tailon in the development system
*** New packages
 - smokey
*** New services
 - smokey
** May
*** Update Guix
 - release_5 -> release_6 -> release 7
*** Removed services
 - contacts-frontend
 - specialist-frontend
 - multipage-frontend
 - content-api
*** Asset manager service improvements
 - Add a dummy govuk_clamscan script
 - Add support for delayed jobs
** April